@@ -9,12 +9,16 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu.umgc</groupId>
-	<artifactId>Project-Tracker</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Project-Tracker</name>
-	<description>Project for Spring Boot project tracker</description>
+
+	<artifactId>CAPPMS</artifactId>
+    <version>1.0.0</version>
+	<name>CAPPMS</name>
+	<description>Capstone Project Proposal Management System</description>
 
 	<properties>
+	  	<sonar.projectKey>umgccapstone_umgc.idea.tracker</sonar.projectKey>
+  		<sonar.organization>umgc-capstone</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>8</java.version>
 	</properties>
 
@@ -93,6 +97,11 @@
 		    <artifactId>junit-jupiter-engine</artifactId>
 		    <scope>test</scope>
 		</dependency>
+	 	
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency> 
 	</dependencies>
 
 
@@ -102,7 +111,54 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+                <inherited>true</inherited>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <runOrder>alphabetical</runOrder>
+                </configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>2.4.0</version>
+				<configuration>
+					<java>
+					  <!-- These are the defaults, you can override if you want -->
+					  <includes>
+						<include>src/main/java/**/*.java</include>
+						<include>src/test/java/**/*.java</include>
+					  </includes>
+				  
+					  <importOrder />
+				  
+					  <removeUnusedImports /> <!-- self-explanatory -->
+				  
+					  <googleJavaFormat>
+						<version>1.9</version>
+						<style>GOOGLE</style>
+					  </googleJavaFormat>
+					</java>
+				  </configuration>
+			</plugin>
 		</plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+        </pluginManagement>		
 	</build>
 
 </project>
